--- a/.gitignore
+++ b/.gitignore
@@ -419,7 +419,7 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # VS Code files for those working on multiple tools
-.vscode/*
+**/.vscode/*
 *.code-workspace
 
 # Local History for Visual Studio Code
