--- a/3rd-course/web-project/backend/package.json
+++ b/3rd-course/web-project/backend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "abort-controller": "^3.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.1",
