--- a/3rd-course/web-project/backend/.env
+++ b/3rd-course/web-project/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://dudchak1:YTQHWGzGwmgvvrdH@cluster0.dsafh.mongodb.net/
-PORT=5000
+MONGO_URI=mongodb://127.0.0.1:27017/test
+PORT=1234
