--- a/3rd-course/web-project/backend/.env
+++ b/3rd-course/web-project/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://127.0.0.1:27017/test
-PORT=1234
+MONGO_URI=mongodb+srv://dudchakv:iAUZeUQTolOVQuMB@clusterweb.f4xlp.mongodb.net/
+PORT=5002
